welcome.lessons.welcome.bdr.BDR.scala.code
var instruction: String = ""
var f : Boolean = False
